--- a/Training-Code/Los_Angeles_Music_Composer_Maker.ipynb
+++ b/Training-Code/Los_Angeles_Music_Composer_Maker.ipynb
@@ -73,12 +73,13 @@
       },
       "outputs": [],
       "source": [
-        "#!pip install torch\n",
+        "# !pip install --upgrade pip\n",
+        "!pip install torch==2.0.1\n",
         "!pip install einops\n",
         "!pip install torch-summary\n",
-        "#!pip install sklearn\n",
+        "!pip install sklearn\n",
         "!pip install tqdm\n",
-        "#!pip install matplotlib"
+        "!pip install matplotlib"
       ]
     },
     {
@@ -103,23 +104,25 @@
         "import torch.optim as optim\n",
         "from torch.utils.data import DataLoader, Dataset\n",
         "\n",
+        "torch.set_float32_matmul_precision('high')\n",
+        "\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "from torchsummary import summary\n",
         "from sklearn import metrics\n",
         "\n",
-        "%cd /notebooks/tegridy-tools/tegridy-tools/\n",
+        "%cd /content/tegridy-tools/tegridy-tools/\n",
         "\n",
         "import TMIDIX\n",
         "\n",
-        "%cd /notebooks/tegridy-tools/tegridy-tools/LWA-Transformer\n",
+        "%cd /content/tegridy-tools/tegridy-tools/LWA-Transformer\n",
         "\n",
         "from lwa_transformer import *\n",
         "\n",
-        "%cd /notebooks/\n",
+        "%cd /content/\n",
         "\n",
-        "if not os.path.exists('/notebooks/INTS'):\n",
-        "    os.makedirs('/notebooks/INTS')\n",
+        "if not os.path.exists('/content/INTS'):\n",
+        "    os.makedirs('/content/INTS')\n",
         "\n",
         "print('Done')"
       ]
@@ -143,7 +146,7 @@
       "source": [
         "# Load training data\n",
         "\n",
-        "dataset_addr = \"/notebooks/INTS\"\n",
+        "dataset_addr = \"/content/INTS\"\n",
         "\n",
         "filez = list()\n",
         "for (dirpath, dirnames, filenames) in os.walk(dataset_addr):\n",
@@ -159,7 +162,7 @@
         "for f in tqdm.tqdm(filez):\n",
         "    train_data = torch.cat((train_data, torch.Tensor(pickle.load(open(f, 'rb')))))\n",
         "    print('Loaded file:', f)\n",
-        "    \n",
+        "\n",
         "print('Done!')"
       ]
     },
@@ -257,7 +260,7 @@
         "model.cuda()\n",
         "\n",
         "print('Done!')\n",
-        "      \n",
+        "\n",
         "summary(model)\n",
         "\n",
         "# Dataloader\n",
@@ -269,12 +272,12 @@
         "        self.seq_len = seq_len\n",
         "\n",
         "    def __getitem__(self, index):\n",
-        "        \n",
+        "\n",
         "        # random sampling\n",
         "        idx = secrets.randbelow(self.data.size(0) - self.seq_len - 1)\n",
-        "   \n",
+        "\n",
         "        full_seq = self.data[idx: idx + self.seq_len + 1].long()\n",
-        "        \n",
+        "\n",
         "        return full_seq.cuda()\n",
         "\n",
         "    def __len__(self):\n",
@@ -332,14 +335,14 @@
         "    for __ in range(GRADIENT_ACCUMULATE_EVERY):\n",
         "        loss, acc = model(next(train_loader), return_loss = True)\n",
         "        loss.backward(torch.ones(loss.shape).cuda())\n",
-        "        \n",
+        "\n",
         "    if i % PRINT_STATS_EVERY == 0:\n",
         "        print(f'Training loss: {loss.mean().item()}')\n",
         "        print(f'Training acc: {acc.mean().item()}')\n",
-        "    \n",
+        "\n",
         "    train_losses.append(loss.mean().item())\n",
         "    train_accs.append(acc.mean().item())\n",
-        "    \n",
+        "\n",
         "    torch.nn.utils.clip_grad_norm_(model.parameters(), 0.5)\n",
         "    optim.step()\n",
         "    optim.zero_grad()\n",
@@ -348,36 +351,36 @@
         "        model.eval()\n",
         "        with torch.no_grad():\n",
         "            val_loss, val_acc = model(next(val_loader), return_loss = True)\n",
-        "            \n",
+        "\n",
         "            print(f'Validation loss: {val_loss.mean().item()}')\n",
         "            print(f'Validation acc: {val_acc.mean().item()}')\n",
-        "            \n",
+        "\n",
         "            val_losses.append(val_loss.mean().item())\n",
         "            val_accs.append(val_acc.mean().item())\n",
-        "            \n",
+        "\n",
         "            print('Plotting training loss graph...')\n",
-        "            \n",
+        "\n",
         "            tr_loss_list = train_losses\n",
         "            plt.plot([i for i in range(len(tr_loss_list))] ,tr_loss_list, 'b')\n",
         "            plt.show()\n",
         "            plt.close()\n",
         "            print('Done!')\n",
-        "            \n",
+        "\n",
         "            print('Plotting training acc graph...')\n",
-        "            \n",
+        "\n",
         "            tr_loss_list = train_accs\n",
         "            plt.plot([i for i in range(len(tr_loss_list))] ,tr_loss_list, 'b')\n",
         "            plt.show()\n",
         "            plt.close()\n",
         "            print('Done!')\n",
-        "            \n",
+        "\n",
         "            print('Plotting validation loss graph...')\n",
         "            tr_loss_list = val_losses\n",
         "            plt.plot([i for i in range(len(tr_loss_list))] ,tr_loss_list, 'b')\n",
         "            plt.show()\n",
         "            plt.close()\n",
         "            print('Done!')\n",
-        "            \n",
+        "\n",
         "            print('Plotting validation acc graph...')\n",
         "            tr_loss_list = val_accs\n",
         "            plt.plot([i for i in range(len(tr_loss_list))] ,tr_loss_list, 'b')\n",
@@ -388,27 +391,27 @@
         "    if i % GENERATE_EVERY == 0:\n",
         "        model.eval()\n",
         "        inp = random.choice(val_dataset)[:-1]\n",
-        "        \n",
+        "\n",
         "        print(inp)\n",
         "\n",
         "        sample = model.module.generate(inp[None, ...], GENERATE_LENGTH)\n",
-        "        \n",
+        "\n",
         "        print(sample)\n",
-        "        \n",
+        "\n",
         "    if i % SAVE_EVERY == 0:\n",
-        "        \n",
+        "\n",
         "        print('Saving model progress. Please wait...')\n",
         "        print('model_checkpoint_' + str(i) + '_steps_' + str(round(float(train_losses[-1]), 4)) + '_loss.pth')\n",
-        "        \n",
-        "        fname = '/notebooks/model_checkpoint_'  + str(i) + '_steps_' + str(round(float(train_losses[-1]), 4)) + '_loss.pth'\n",
-        "        \n",
+        "\n",
+        "        fname = '/content/model_checkpoint_'  + str(i) + '_steps_' + str(round(float(train_losses[-1]), 4)) + '_loss.pth'\n",
+        "\n",
         "        torch.save(model.state_dict(), fname)\n",
-        "        \n",
+        "\n",
         "        data = [train_losses, train_accs, val_losses, val_accs]\n",
         "\n",
-        "        TMIDIX.Tegridy_Any_Pickle_File_Writer(data, '/notebooks/losses_accs')\n",
-        "        \n",
-        "        print('Done!')      "
+        "        TMIDIX.Tegridy_Any_Pickle_File_Writer(data, '/content/losses_accs')\n",
+        "\n",
+        "        print('Done!')"
       ]
     },
     {
@@ -431,11 +434,11 @@
         "print('Saving model progress. Please wait...')\n",
         "print('model_checkpoint_' + str(i) + '_steps_' + str(round(float(train_losses[-1]), 4)) + '_loss.pth')\n",
         "\n",
-        "fname = '/notebooks/model_checkpoint_'  + str(i) + '_steps_' + str(round(float(train_losses[-1]), 4)) + '_loss.pth'\n",
+        "fname = '/content/model_checkpoint_'  + str(i) + '_steps_' + str(round(float(train_losses[-1]), 4)) + '_loss.pth'\n",
         "\n",
         "torch.save(model.state_dict(), fname)\n",
         "\n",
-        "print('Done!')   "
+        "print('Done!')"
       ]
     },
     {
@@ -449,28 +452,28 @@
         "# Save training loss graph\n",
         "\n",
         "plt.plot([i for i in range(len(train_losses))] ,train_losses, 'b')\n",
-        "plt.savefig('/notebooks/training_loss_graph.png')\n",
+        "plt.savefig('/content/training_loss_graph.png')\n",
         "plt.close()\n",
         "print('Done!')\n",
         "\n",
         "# Save training acc graph\n",
         "\n",
         "plt.plot([i for i in range(len(train_accs))] ,train_accs, 'b')\n",
-        "plt.savefig('/notebooks/training_acc_graph.png')\n",
+        "plt.savefig('/content/training_acc_graph.png')\n",
         "plt.close()\n",
         "print('Done!')\n",
         "\n",
         "# Save validation loss graph\n",
         "\n",
         "plt.plot([i for i in range(len(val_losses))] ,val_losses, 'b')\n",
-        "plt.savefig('/notebooks/validation_loss_graph.png')\n",
+        "plt.savefig('/content/validation_loss_graph.png')\n",
         "plt.close()\n",
         "print('Done!')\n",
         "\n",
         "# Save validation acc graph\n",
         "\n",
         "plt.plot([i for i in range(len(val_accs))] ,val_accs, 'b')\n",
-        "plt.savefig('/notebooks/validation_acc_graph.png')\n",
+        "plt.savefig('/content/validation_acc_graph.png')\n",
         "plt.close()\n",
         "print('Done!')"
       ]
@@ -485,7 +488,7 @@
       "source": [
         "data = [train_losses, train_accs, val_losses, val_accs]\n",
         "\n",
-        "TMIDIX.Tegridy_Any_Pickle_File_Writer(data, '/notebooks/losses_accs')"
+        "TMIDIX.Tegridy_Any_Pickle_File_Writer(data, '/content/losses_accs')"
       ]
     },
     {
@@ -535,7 +538,8 @@
     "accelerator": "GPU",
     "colab": {
       "private_outputs": true,
-      "provenance": []
+      "provenance": [],
+      "gpuClass": "premium"
     },
     "gpuClass": "premium",
     "kernelspec": {
