--- a/Los_Angeles_Music_Composer_Edition.ipynb
+++ b/Los_Angeles_Music_Composer_Edition.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Los Angeles Music Composer Edition (ver. 1.1)\n",
+        "# Los Angeles Music Composer Edition (ver. 1.2)\n",
         "\n",
         "***\n",
         "\n",
@@ -252,6 +252,7 @@
         "select_seed_MIDI = \"Los-Angeles-Music-Composer-Piano-Seed-1\" #@param [\"Los-Angeles-Music-Composer-Piano-Seed-1\", \"Los-Angeles-Music-Composer-Piano-Seed-2\", \"Los-Angeles-Music-Composer-Piano-Seed-3\", \"Los-Angeles-Music-Composer-Piano-Seed-4\", \"Los-Angeles-Music-Composer-Piano-Seed-5\", \"Los-Angeles-Music-Composer-MI-Seed-1\", \"Los-Angeles-Music-Composer-MI-Seed-2\", \"Los-Angeles-Music-Composer-MI-Seed-3\", \"Los-Angeles-Music-Composer-MI-Seed-4\", \"Los-Angeles-Music-Composer-MI-Seed-5\"]\n",
         "full_path_to_custom_seed_MIDI = \"\" #@param {type:\"string\"}\n",
         "number_of_prime_tokens = 402 #@param {type:\"slider\", min:126, max:3000, step:3}\n",
+        "render_MIDI_to_audio = True # @param {type:\"boolean\"}\n",
         "\n",
         "if full_path_to_custom_seed_MIDI == '':\n",
         "  f = '/content/Los-Angeles-Music-Composer/Seeds/'+select_seed_MIDI+'.mid'\n",
@@ -478,14 +479,16 @@
         "colors = ['red', 'yellow', 'green', 'cyan', 'blue', 'pink', 'orange', 'purple', 'gray', 'white', 'gold', 'silver']\n",
         "\n",
         "block_lines = [(song_f[-1][1] / 1000)]\n",
+        "block_tokens = [number_of_prime_tokens]\n",
         "\n",
         "for s in song_f:\n",
         "  x.append(s[1] / 1000)\n",
         "  y.append(s[4])\n",
         "  c.append(colors[s[3]])\n",
         "\n",
-        "FluidSynth(\"/usr/share/sounds/sf2/FluidR3_GM.sf2\", 16000).midi_to_audio(str(fname + '.mid'), str(fname + '.wav'))\n",
-        "display(Audio(str(fname + '.wav'), rate=16000))\n",
+        "if render_MIDI_to_audio:\n",
+        "  FluidSynth(\"/usr/share/sounds/sf2/FluidR3_GM.sf2\", 16000).midi_to_audio(str(fname + '.mid'), str(fname + '.wav'))\n",
+        "  display(Audio(str(fname + '.wav'), rate=16000))\n",
         "\n",
         "plt.figure(figsize=(14,5))\n",
         "ax=plt.axes(title=fname)\n",
@@ -524,16 +527,18 @@
       "outputs": [],
       "source": [
         "#@title Standard/Simple Continuation\n",
-        "\n",
-        "number_of_batches_to_generate = 4 #@param {type:\"slider\", min:1, max:16, step:1}\n",
+        "number_of_tokens_to_generate = 120 # @param {type:\"slider\", min:33, max:1023, step:3}\n",
+        "number_of_batches_to_generate = 1 #@param {type:\"slider\", min:1, max:16, step:1}\n",
+        "preview_length_in_tokens = 120 # @param {type:\"slider\", min:33, max:240, step:3}\n",
         "number_of_memory_tokens = 4095 #@param {type:\"slider\", min:402, max:4095, step:3}\n",
         "temperature = 1 #@param {type:\"slider\", min:0.1, max:1, step:0.1}\n",
+        "render_MIDI_to_audio = True # @param {type:\"boolean\"}\n",
         "\n",
         "print('=' * 70)\n",
         "print('Los Angeles Music Composer Standard Model Generator')\n",
         "print('=' * 70)\n",
         "\n",
-        "preview = melody_chords_f[-120:]\n",
+        "preview = melody_chords_f[-preview_length_in_tokens:]\n",
         "\n",
         "inp = [melody_chords_f[-number_of_memory_tokens:]] * number_of_batches_to_generate\n",
         "\n",
@@ -542,7 +547,7 @@
         "start_time = time()\n",
         "\n",
         "out = model.module.generate(inp,\n",
-        "                            402,\n",
+        "                            number_of_tokens_to_generate,\n",
         "                            temperature=temperature,\n",
         "                            return_prime=False,\n",
         "                            verbose=True)\n",
@@ -627,8 +632,9 @@
         "        y.append(s[4])\n",
         "        c.append(colors[s[3]])\n",
         "\n",
-        "      FluidSynth(\"/usr/share/sounds/sf2/FluidR3_GM.sf2\", 16000).midi_to_audio(str(fname + '.mid'), str(fname + '.wav'))\n",
-        "      display(Audio(str(fname + '.wav'), rate=16000))\n",
+        "      if render_MIDI_to_audio:\n",
+        "        FluidSynth(\"/usr/share/sounds/sf2/FluidR3_GM.sf2\", 16000).midi_to_audio(str(fname + '.mid'), str(fname + '.wav'))\n",
+        "        display(Audio(str(fname + '.wav'), rate=16000))\n",
         "\n",
         "      plt.figure(figsize=(14,5))\n",
         "      ax=plt.axes(title=fname)\n",
@@ -636,7 +642,7 @@
         "\n",
         "      plt.scatter(x,y, c=c)\n",
         "\n",
-        "      pbl = song_f[39][1] / 1000\n",
+        "      pbl = song_f[(int(preview_length_in_tokens / 3))][1] / 1000\n",
         "\n",
         "      ax.axvline(x=pbl, c='w')\n",
         "\n",
@@ -651,6 +657,7 @@
         "#@title Choose one generated block to add to the composition\n",
         "block_action = \"add_last_generated_block\" #@param [\"add_last_generated_block\", \"remove_last_added_block\"]\n",
         "add_block_with_batch_number = 0 #@param {type:\"slider\", min:0, max:15, step:1}\n",
+        "render_MIDI_to_audio = True # @param {type:\"boolean\"}\n",
         "\n",
         "print('=' * 70)\n",
         "\n",
@@ -658,8 +665,8 @@
         "  melody_chords_f.extend(out0[min(len(out0)-1, add_block_with_batch_number)])\n",
         "  print('Block added!')\n",
         "else:\n",
-        "  if len(melody_chords_f) > 402:\n",
-        "    melody_chords_f = melody_chords_f[:max(number_of_prime_tokens, (len(melody_chords_f)-402))]\n",
+        "  if len(melody_chords_f) > number_of_prime_tokens:\n",
+        "    melody_chords_f = melody_chords_f[:max(number_of_prime_tokens, (len(melody_chords_f)-block_tokens[-1]))]\n",
         "    print('Block removed!')\n",
         "  else:\n",
         "    print('Nothing to remove!!!')\n",
@@ -727,18 +734,20 @@
         "\n",
         "    if block_action == 'add_last_generated_block':\n",
         "      block_lines.append((song_f[-1][1] / 1000))\n",
+        "      block_tokens.append(len(out0[min(len(out0)-1, add_block_with_batch_number)]))\n",
         "    else:\n",
         "      if len(block_lines) > 1:\n",
         "        block_lines.pop()\n",
-        "\n",
+        "        block_tokens.pop()\n",
         "\n",
         "    for s in song_f:\n",
         "      x.append(s[1] / 1000)\n",
         "      y.append(s[4])\n",
         "      c.append(colors[s[3]])\n",
         "\n",
-        "    FluidSynth(\"/usr/share/sounds/sf2/FluidR3_GM.sf2\", 16000).midi_to_audio(str(fname + '.mid'), str(fname + '.wav'))\n",
-        "    display(Audio(str(fname + '.wav'), rate=16000))\n",
+        "    if render_MIDI_to_audio:\n",
+        "      FluidSynth(\"/usr/share/sounds/sf2/FluidR3_GM.sf2\", 16000).midi_to_audio(str(fname + '.mid'), str(fname + '.wav'))\n",
+        "      display(Audio(str(fname + '.wav'), rate=16000))\n",
         "\n",
         "    plt.figure(figsize=(14,5))\n",
         "    ax=plt.axes(title=fname)\n",
