--- a/Los_Angeles_Music_Composer_Edition.ipynb
+++ b/Los_Angeles_Music_Composer_Edition.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Los Angeles Music Composer Edition (ver. 1.2)\n",
+        "# Los Angeles Music Composer Edition (ver. 2.0)\n",
         "\n",
         "***\n",
         "\n",
@@ -182,8 +182,15 @@
         "print('=' * 70)\n",
         "print('Instantiating model...')\n",
         "\n",
-        "SEQ_LEN = 4096\n",
+        "torch.backends.cuda.matmul.allow_tf32 = True # allow tf32 on matmul\n",
+        "torch.backends.cudnn.allow_tf32 = True # allow tf32 on cudnn\n",
+        "device_type = 'cuda'\n",
+        "dtype = 'bfloat16' if torch.cuda.is_available() and torch.cuda.is_bf16_supported() else 'float16' # 'float32', 'bfloat16', or 'float16', the latter will auto implement a GradScaler\n",
         "\n",
+        "ptdtype = {'float32': torch.float32, 'bfloat16': torch.bfloat16, 'float16': torch.float16}[dtype]\n",
+        "ctx = nullcontext() if device_type == 'cpu' else torch.amp.autocast(device_type=device_type, dtype=ptdtype)\n",
+        "\n",
+        "SEQ_LEN = 4096\n",
         "# instantiate the model\n",
         "\n",
         "model = LocalTransformer(\n",
@@ -546,11 +553,12 @@
         "\n",
         "start_time = time()\n",
         "\n",
-        "out = model.module.generate(inp,\n",
-        "                            number_of_tokens_to_generate,\n",
-        "                            temperature=temperature,\n",
-        "                            return_prime=False,\n",
-        "                            verbose=True)\n",
+        "with ctx:\n",
+        "  out = model.module.generate(inp,\n",
+        "                              number_of_tokens_to_generate,\n",
+        "                              temperature=temperature,\n",
+        "                              return_prime=False,\n",
+        "                              verbose=True)\n",
         "\n",
         "out0 = out.tolist()\n",
         "\n",
