--- a/Los_Angeles_Music_Composer_Edition.ipynb
+++ b/Los_Angeles_Music_Composer_Edition.ipynb
@@ -188,7 +188,7 @@
         "dtype = 'bfloat16' if torch.cuda.is_available() and torch.cuda.is_bf16_supported() else 'float16' # 'float32', 'bfloat16', or 'float16', the latter will auto implement a GradScaler\n",
         "\n",
         "ptdtype = {'float32': torch.float32, 'bfloat16': torch.bfloat16, 'float16': torch.float16}[dtype]\n",
-        "ctx = nullcontext() if device_type == 'cpu' else torch.amp.autocast(device_type=device_type, dtype=ptdtype)\n",
+        "ctx = torch.amp.autocast(device_type=device_type, dtype=ptdtype)\n",
         "\n",
         "SEQ_LEN = 4096\n",
         "# instantiate the model\n",
