--- a/Los_Angeles_Music_Composer.ipynb
+++ b/Los_Angeles_Music_Composer.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Los Angeles Music Composer (ver. 2.2)\n",
+        "# Los Angeles Music Composer (ver. 3.0)\n",
         "\n",
         "***\n",
         "\n",
@@ -102,6 +102,14 @@
         "print('=' * 70)\n",
         "print('Loading main Los Angeles Music Composer modules...')\n",
         "import torch\n",
+        "\n",
+        "torch.backends.cuda.matmul.allow_tf32 = True # allow tf32 on matmul\n",
+        "torch.backends.cudnn.allow_tf32 = True # allow tf32 on cudnn\n",
+        "device_type = 'cuda'\n",
+        "dtype = 'bfloat16' if torch.cuda.is_available() and torch.cuda.is_bf16_supported() else 'float16' # 'float32', 'bfloat16', or 'float16', the latter will auto implement a GradScaler\n",
+        "\n",
+        "ptdtype = {'float32': torch.float32, 'bfloat16': torch.bfloat16, 'float16': torch.float16}[dtype]\n",
+        "ctx = torch.amp.autocast(device_type=device_type, dtype=ptdtype)\n",
         "\n",
         "%cd /content/Los-Angeles-Music-Composer\n",
         "\n",
@@ -375,12 +383,13 @@
         "\n",
         "#start_time = time()\n",
         "\n",
-        "out = model.module.generate(inp,\n",
-        "                      number_of_tokens_tp_generate,\n",
-        "                      temperature=temperature,\n",
-        "                      return_prime=True,\n",
-        "                      min_stop_token=0,\n",
-        "                      verbose=True)\n",
+        "with ctx:\n",
+        "  out = model.module.generate(inp,\n",
+        "                        number_of_tokens_tp_generate,\n",
+        "                        temperature=temperature,\n",
+        "                        return_prime=True,\n",
+        "                        min_stop_token=0,\n",
+        "                        verbose=True)\n",
         "\n",
         "out0 = out.tolist()\n",
         "\n",
@@ -815,12 +824,13 @@
         "\n",
         "#start_time = time()\n",
         "\n",
-        "out = model.module.generate(inp,\n",
-        "                      number_of_tokens_tp_generate,\n",
-        "                      temperature=temperature,\n",
-        "                      return_prime=True,\n",
-        "                      min_stop_token=min_stop_token,\n",
-        "                      verbose=True)\n",
+        "with ctx:\n",
+        "  out = model.module.generate(inp,\n",
+        "                        number_of_tokens_tp_generate,\n",
+        "                        temperature=temperature,\n",
+        "                        return_prime=True,\n",
+        "                        min_stop_token=min_stop_token,\n",
+        "                        verbose=True)\n",
         "\n",
         "out0 = out.tolist()\n",
         "\n",
@@ -959,12 +969,13 @@
         "\n",
         "#start_time = time()\n",
         "\n",
-        "out = model.module.generate(inp,\n",
-        "                      number_of_tokens_to_generate,\n",
-        "                      temperature=temperature,\n",
-        "                      return_prime=include_prime_tokens_in_generated_output,\n",
-        "                      min_stop_token=min_stop_token,\n",
-        "                      verbose=True)\n",
+        "with ctx:\n",
+        "  out = model.module.generate(inp,\n",
+        "                        number_of_tokens_to_generate,\n",
+        "                        temperature=temperature,\n",
+        "                        return_prime=include_prime_tokens_in_generated_output,\n",
+        "                        min_stop_token=min_stop_token,\n",
+        "                        verbose=True)\n",
         "\n",
         "out0 = out.tolist()\n",
         "print('=' * 70)\n",
@@ -1088,11 +1099,12 @@
         "\n",
         "  inp = torch.LongTensor(out2).cuda()\n",
         "\n",
-        "  out1 = model.module.generate(inp[None, ...],\n",
-        "                        1,\n",
-        "                        temperature=temperature,\n",
-        "                        return_prime=False,\n",
-        "                        verbose=False)\n",
+        "  with ctx:\n",
+        "    out1 = model.module.generate(inp[None, ...],\n",
+        "                          1,\n",
+        "                          temperature=temperature,\n",
+        "                          return_prime=False,\n",
+        "                          verbose=False)\n",
         "\n",
         "  out2.extend(out1[0].tolist())\n",
         "\n",
@@ -1277,11 +1289,12 @@
         "\n",
         "  while chord_time < next_note_time and count < number_of_generation_attempts_per_melody_note:\n",
         "\n",
-        "    out1 = model.module.generate(inp[None, ...],\n",
-        "                          3,\n",
-        "                          temperature=temperature,\n",
-        "                          return_prime=False,\n",
-        "                          verbose=False)\n",
+        "    with ctx:\n",
+        "      out1 = model.module.generate(inp[None, ...],\n",
+        "                            3,\n",
+        "                            temperature=temperature,\n",
+        "                            return_prime=False,\n",
+        "                            verbose=False)\n",
         "\n",
         "    inp = torch.cat((inp, out1[0]))\n",
         "\n",
