--- a/Los_Angeles_Music_Composer_TTM_Edition.ipynb
+++ b/Los_Angeles_Music_Composer_TTM_Edition.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Los Angeles Music Composer TTM Edition (ver. 1.1)\n",
+        "# Los Angeles Music Composer TTM Edition (ver. 2.0)\n",
         "\n",
         "***\n",
         "\n",
@@ -103,6 +103,14 @@
         "print('=' * 70)\n",
         "print('Loading main Los Angeles Music Composer modules...')\n",
         "import torch\n",
+        "\n",
+        "torch.backends.cuda.matmul.allow_tf32 = True # allow tf32 on matmul\n",
+        "torch.backends.cudnn.allow_tf32 = True # allow tf32 on cudnn\n",
+        "device_type = 'cuda'\n",
+        "dtype = 'bfloat16' if torch.cuda.is_available() and torch.cuda.is_bf16_supported() else 'float16' # 'float32', 'bfloat16', or 'float16', the latter will auto implement a GradScaler\n",
+        "\n",
+        "ptdtype = {'float32': torch.float32, 'bfloat16': torch.bfloat16, 'float16': torch.float16}[dtype]\n",
+        "ctx = torch.amp.autocast(device_type=device_type, dtype=ptdtype)\n",
         "\n",
         "%cd /content/Los-Angeles-Music-Composer\n",
         "\n",
@@ -367,12 +375,13 @@
         "\n",
         "inp = torch.LongTensor(inp).cuda()\n",
         "\n",
-        "out = model.module.generate(inp,\n",
-        "                      number_of_tokens_to_generate,\n",
-        "                      temperature=temperature,\n",
-        "                      return_prime=True,\n",
-        "                      min_stop_token=min_stop_token,\n",
-        "                      verbose=True)\n",
+        "with ctx:\n",
+        "  out = model.module.generate(inp,\n",
+        "                        number_of_tokens_to_generate,\n",
+        "                        temperature=temperature,\n",
+        "                        return_prime=True,\n",
+        "                        min_stop_token=min_stop_token,\n",
+        "                        verbose=True)\n",
         "\n",
         "out0 = out.tolist()\n",
         "print('=' * 70)\n",
