--- a/Los_Angeles_Music_Composer_Edition.ipynb
+++ b/Los_Angeles_Music_Composer_Edition.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Los Angeles Music Composer Edition (ver. 2.0)\n",
+        "# Los Angeles Music Composer Edition (ver. 3.0)\n",
         "\n",
         "***\n",
         "\n",
@@ -103,14 +103,6 @@
         "print('Loading main Los Angeles Music Composer modules...')\n",
         "import torch\n",
         "\n",
-        "torch.backends.cuda.matmul.allow_tf32 = True # allow tf32 on matmul\n",
-        "torch.backends.cudnn.allow_tf32 = True # allow tf32 on cudnn\n",
-        "device_type = 'cuda'\n",
-        "dtype = 'bfloat16' if torch.cuda.is_available() and torch.cuda.is_bf16_supported() else 'float16' # 'float32', 'bfloat16', or 'float16', the latter will auto implement a GradScaler\n",
-        "\n",
-        "ptdtype = {'float32': torch.float32, 'bfloat16': torch.bfloat16, 'float16': torch.float16}[dtype]\n",
-        "ctx = torch.amp.autocast(device_type=device_type, dtype=ptdtype)\n",
-        "\n",
         "%cd /content/Los-Angeles-Music-Composer\n",
         "\n",
         "import TMIDIX\n",
@@ -128,6 +120,8 @@
         "\n",
         "from midi2audio import FluidSynth\n",
         "from IPython.display import Audio, display\n",
+        "\n",
+        "from google.colab import files\n",
         "\n",
         "print('=' * 70)\n",
         "print('Done!')\n",
@@ -184,11 +178,25 @@
         "#@title Load Los Angeles Music Composer Model\n",
         "full_path_to_model_checkpoint = \"/content/Los-Angeles-Music-Composer/Model/Los_Angeles_Music_Composer_Model_88835_steps_0.643_loss.pth\" #@param {type:\"string\"}\n",
         "\n",
+        "#@markdown Model precision option\n",
+        "\n",
+        "model_precision = \"float16\" # @param [\"float16\", \"float32\"]\n",
+        "\n",
+        "#@markdown float16 == Half precision/double speed\n",
+        "\n",
+        "#@markdown float32 == Full precision/normal speed\n",
+        "\n",
         "print('=' * 70)\n",
         "print('Loading Los Angeles Music Composer Pre-Trained Model...')\n",
         "print('Please wait...')\n",
         "print('=' * 70)\n",
         "print('Instantiating model...')\n",
+        "\n",
+        "torch.backends.cuda.matmul.allow_tf32 = True # allow tf32 on matmul\n",
+        "torch.backends.cudnn.allow_tf32 = True # allow tf32 on cudnn\n",
+        "device_type = 'cuda'\n",
+        "ptdtype = {'float32': torch.float32, 'bfloat16': torch.bfloat16, 'float16': torch.float16}[model_precision]\n",
+        "ctx = torch.amp.autocast(device_type=device_type, dtype=ptdtype)\n",
         "\n",
         "SEQ_LEN = 4096\n",
         "# instantiate the model\n",
@@ -224,13 +232,8 @@
         "# Plot Token Embeddings\n",
         "tok_emb = model.module.token_emb.weight.detach().cpu().tolist()\n",
         "\n",
-        "tok_emb1 = []\n",
-        "\n",
-        "for t in tok_emb:\n",
-        "    tok_emb1.append([abs(statistics.median(t))])\n",
-        "\n",
         "cos_sim = metrics.pairwise_distances(\n",
-        "   tok_emb1, metric='euclidean'\n",
+        "   tok_emb, metric='cosine'\n",
         ")\n",
         "plt.figure(figsize=(7, 7))\n",
         "plt.imshow(cos_sim, cmap=\"inferno\", interpolation=\"nearest\")\n",
@@ -256,16 +259,18 @@
       "cell_type": "code",
       "source": [
         "#@title Load Seed MIDI\n",
-        "select_seed_MIDI = \"Los-Angeles-Music-Composer-Piano-Seed-1\" #@param [\"Los-Angeles-Music-Composer-Piano-Seed-1\", \"Los-Angeles-Music-Composer-Piano-Seed-2\", \"Los-Angeles-Music-Composer-Piano-Seed-3\", \"Los-Angeles-Music-Composer-Piano-Seed-4\", \"Los-Angeles-Music-Composer-Piano-Seed-5\", \"Los-Angeles-Music-Composer-MI-Seed-1\", \"Los-Angeles-Music-Composer-MI-Seed-2\", \"Los-Angeles-Music-Composer-MI-Seed-3\", \"Los-Angeles-Music-Composer-MI-Seed-4\", \"Los-Angeles-Music-Composer-MI-Seed-5\"]\n",
-        "full_path_to_custom_seed_MIDI = \"\" #@param {type:\"string\"}\n",
+        "select_seed_MIDI = \"Upload your own custom MIDI\" #@param [\"Upload your own custom MIDI\", \"Los-Angeles-Music-Composer-Piano-Seed-1\", \"Los-Angeles-Music-Composer-Piano-Seed-2\", \"Los-Angeles-Music-Composer-Piano-Seed-3\", \"Los-Angeles-Music-Composer-Piano-Seed-4\", \"Los-Angeles-Music-Composer-Piano-Seed-5\", \"Los-Angeles-Music-Composer-MI-Seed-1\", \"Los-Angeles-Music-Composer-MI-Seed-2\", \"Los-Angeles-Music-Composer-MI-Seed-3\", \"Los-Angeles-Music-Composer-MI-Seed-4\", \"Los-Angeles-Music-Composer-MI-Seed-5\"]\n",
         "number_of_prime_tokens = 402 #@param {type:\"slider\", min:126, max:3000, step:3}\n",
         "render_MIDI_to_audio = True # @param {type:\"boolean\"}\n",
         "\n",
-        "if full_path_to_custom_seed_MIDI == '':\n",
+        "if select_seed_MIDI != \"Upload your own custom MIDI\":\n",
         "  f = '/content/Los-Angeles-Music-Composer/Seeds/'+select_seed_MIDI+'.mid'\n",
+        "  score = TMIDIX.midi2ms_score(open(f, 'rb').read())\n",
         "\n",
         "else:\n",
-        "  f = full_path_to_custom_seed_MIDI\n",
+        "  uploaded_MIDI = files.upload()\n",
+        "  score = TMIDIX.midi2ms_score(list(uploaded_MIDI.values())[0])\n",
+        "  f = list(uploaded_MIDI.keys())[0]\n",
         "\n",
         "print('=' * 70)\n",
         "print('Los Angeles Music Composer Seed MIDI Loader')\n",
@@ -535,7 +540,7 @@
       "source": [
         "#@title Standard/Simple Continuation\n",
         "number_of_tokens_to_generate = 120 # @param {type:\"slider\", min:33, max:1023, step:3}\n",
-        "number_of_batches_to_generate = 1 #@param {type:\"slider\", min:1, max:16, step:1}\n",
+        "number_of_batches_to_generate = 4 #@param {type:\"slider\", min:1, max:16, step:1}\n",
         "preview_length_in_tokens = 120 # @param {type:\"slider\", min:33, max:240, step:3}\n",
         "number_of_memory_tokens = 4095 #@param {type:\"slider\", min:402, max:4095, step:3}\n",
         "temperature = 1 #@param {type:\"slider\", min:0.1, max:1, step:0.1}\n",
@@ -792,12 +797,11 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "gpuClass": "premium"
+      "gpuClass": "premium",
+      "gpuType": "T4"
     },
-    "gpuClass": "premium",
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
