--- a/Los_Angeles_Music_Composer_TTM_Edition.ipynb
+++ b/Los_Angeles_Music_Composer_TTM_Edition.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Los Angeles Music Composer TTM Edition (ver. 2.0)\n",
+        "# Los Angeles Music Composer TTM Edition (ver. 3.0)\n",
         "\n",
         "***\n",
         "\n",
@@ -187,11 +187,25 @@
         "#@title Load Los Angeles Music Composer Model\n",
         "full_path_to_model_checkpoint = \"/content/Los-Angeles-Music-Composer/Model/Los_Angeles_Music_Composer_Model_88835_steps_0.643_loss.pth\" #@param {type:\"string\"}\n",
         "\n",
+        "#@markdown Model precision option\n",
+        "\n",
+        "model_precision = \"float16\" # @param [\"float16\", \"float32\"]\n",
+        "\n",
+        "#@markdown float16 == Half precision/double speed\n",
+        "\n",
+        "#@markdown float32 == Full precision/normal speed\n",
+        "\n",
         "print('=' * 70)\n",
         "print('Loading Los Angeles Music Composer Pre-Trained Model...')\n",
         "print('Please wait...')\n",
         "print('=' * 70)\n",
         "print('Instantiating model...')\n",
+        "\n",
+        "torch.backends.cuda.matmul.allow_tf32 = True # allow tf32 on matmul\n",
+        "torch.backends.cudnn.allow_tf32 = True # allow tf32 on cudnn\n",
+        "device_type = 'cuda'\n",
+        "ptdtype = {'float32': torch.float32, 'bfloat16': torch.bfloat16, 'float16': torch.float16}[model_precision]\n",
+        "ctx = torch.amp.autocast(device_type=device_type, dtype=ptdtype)\n",
         "\n",
         "SEQ_LEN = 4096\n",
         "\n",
@@ -228,13 +242,8 @@
         "# Plot Token Embeddings\n",
         "tok_emb = model.module.token_emb.weight.detach().cpu().tolist()\n",
         "\n",
-        "tok_emb1 = []\n",
-        "\n",
-        "for t in tok_emb:\n",
-        "    tok_emb1.append([abs(statistics.median(t))])\n",
-        "\n",
         "cos_sim = metrics.pairwise_distances(\n",
-        "   tok_emb1, metric='euclidean'\n",
+        "   tok_emb, metric='cosine'\n",
         ")\n",
         "plt.figure(figsize=(7, 7))\n",
         "plt.imshow(cos_sim, cmap=\"inferno\", interpolation=\"nearest\")\n",
@@ -333,6 +342,7 @@
         "number_of_batches_to_generate = 4 #@param {type:\"slider\", min:1, max:16, step:1}\n",
         "temperature = 0.9 #@param {type:\"slider\", min:0.1, max:1, step:0.1}\n",
         "allow_model_to_stop_generation_if_needed = False #@param {type:\"boolean\"}\n",
+        "render_MIDI_to_audio = True # @param {type:\"boolean\"}\n",
         "\n",
         "print('=' * 70)\n",
         "print('Los Angeles Music Composer TTM Model Generator')\n",
@@ -458,8 +468,9 @@
         "        y.append(s[4])\n",
         "        c.append(colors[s[3]])\n",
         "\n",
-        "      FluidSynth(\"/usr/share/sounds/sf2/FluidR3_GM.sf2\", 16000).midi_to_audio(str(fname + '.mid'), str(fname + '.wav'))\n",
-        "      display(Audio(str(fname + '.wav'), rate=16000))\n",
+        "      if render_MIDI_to_audio:\n",
+        "        FluidSynth(\"/usr/share/sounds/sf2/FluidR3_GM.sf2\", 16000).midi_to_audio(str(fname + '.mid'), str(fname + '.wav'))\n",
+        "        display(Audio(str(fname + '.wav'), rate=16000))\n",
         "\n",
         "      plt.figure(figsize=(14,5))\n",
         "      ax=plt.axes(title=fname)\n",
@@ -489,12 +500,11 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "gpuClass": "premium"
+      "gpuClass": "premium",
+      "gpuType": "T4"
     },
-    "gpuClass": "premium",
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
